// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`actions closePageExplorer close 1`] = `
[
  {
    "payload": undefined,
    "type": "CLOSE_EXPLORER",
  },
]
`;

exports[`actions gotoPage does not reload a loaded page 1`] = `
[
  {
    "payload": {
      "id": 5,
      "transition": 1,
    },
    "type": "GOTO_PAGE",
  },
]
`;

exports[`actions openPageExplorer open 1`] = `
[
  {
    "payload": {
      "id": 5,
    },
    "type": "OPEN_EXPLORER",
  },
  {
    "payload": {
      "id": 5,
    },
    "type": "GET_PAGE_START",
  },
]
`;
